# model-tools

./: .gitattributes  .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
configs/: whisper-large-v3-turbo-samsung.json
docs/: README.md  commands.md  cross-platform.md  huggingface.md  maintenance.md  model-conversion.md
tools/: check_docs.py  create_tiny_onnx.py  hash_model.py  hf_models.py  inspect_onnx.py  onnx_compact_fp32_layernorm.py  onnx_fold_whisper_q_scale.py  samsung_eais_cli.py  verify_samsung_onnx.py  verify_static_onnx.py  workspace.py
